# DUAG-SLAM

./: .gitignore  README.md  nohup.out  requirements.txt  setup.sh
core/: types.py
core/consensus/: __init__.py  convergence.py  duagc_optimizer.py  gaussian_consensus.py  gaussian_distance.py  lie_algebra.py  matching.py  riemannian_admm.py  trajectory_pgo.py
core/pipeline/: __init__.py  local_slam_wrapper.py  robot_node.py
core/uncertainty/: __init__.py  hessian.py  hessian_estimator.py  propagation.py
core/visualization/: __init__.py  realtime_viewer.py
docker/base/: Dockerfile
docker/dpgo/: Dockerfile
docker/monogs/: Dockerfile
experiments/: analyze_results.py  data_loaders.py  run_duag_c.py
experiments/configs/: ablation_uniform_weights.yaml  apart0_2500_ba_only.yaml  apart0_2500_no_consensus.yaml  apart0_2500_v3.yaml  apart0_500_ba.yaml  apart1_2500_ba_only.yaml  aria_monogs_base.yaml  aria_multiagent_duag_c.yaml  bandwidth_sweep_replica.yaml  kimera_campus_duag_c.yaml  kimera_campus_hybrid.yaml  kimera_campus_tunnels.yaml  replica_apart0.yaml  replica_apart0_quick.yaml  replica_apart1.yaml  replica_apart2.yaml  replica_multiagent_base.yaml  replica_multiagent_duag_c.yaml  replica_office0.yaml  replica_office0_quick.yaml  s3e_duag_c.yaml  s3e_monogs_base.yaml  s3e_playground2_100.yaml  s3e_playground2_quick.yaml  s3e_square2.yaml  smoke_test.yaml  subtmrs_duag_c.yaml
extracted/dpgo_wrapper/: CMakeLists.txt  DPGOInterface.py  dpgo_pybind.cpp
extracted/gs_slam/: camera_utils.py  gaussian_model.py  pose_utils.py  renderer.py  slam_utils.py
scripts/: build_dpgo_wrapper.py  collect_results.py  compute_ece.py  compute_s3e_stereo_depth.py  debug_magic_agent.py  debug_magic_growsubmap.py  debug_magic_initmap.py  debug_magic_initmap2.py  debug_magic_mappermap.py  debug_magic_run.py  download_aria.sh  download_kimera.sh  download_replica.sh  download_s3e.sh  download_subtmrs.sh  extract_macego.py  extract_monogs.py  extract_s3e_images.py  extract_swarm.py  magic_pgo_recovery.py  magic_recover_and_eval.py  run_baselines.sh  run_magic_2agent.sh  run_magic_2agent_safe.sh  run_magic_remaining.sh  run_magic_remaining_scenes.sh  run_magic_single_scene.py  test_pgo_offline.py  test_pgo_v2.py  test_pgo_v3.py  visualize_map.py
tests/: test_consensus.py  test_gaussian_consensus.py  test_lie_algebra.py  test_matching.py  test_pipeline.py  test_uncertainty.py
